Update to beta1.2